- Modificamos el panel de administracion para que tenga la opcion de guardar los datos de rotacion del video. Se anexa Multimedia/Videos/settings.txt

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 #Archivos de video
-Multimedia/Videos/*.*
+Multimedia/Videos/*.mp4
+Multimedia/Videos/*.webm
+Multimedia/Videos/*.ogg
 #Archivos de ffmpeg
 admin/ffmpeg/bin/*.*
 admin/ffmpeg/doc/*.*
